# rin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING  CPackConfig.cmake  LICENSE  README.md  TODO.md  build-packages.ps1  build-packages.sh  copy-deps.ps1  meson.build  meson_options.txt  rin-plugin-api.h  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
examples/: meson.build
plugins/: CMakeLists.txt  main.c  meson.build
plugins/dummy/: CMakeLists.txt  dummy_plugin.c  meson.build
plugins/soul-worker/: CMakeLists.txt  meson.build  soul_worker_plugin.c  soul_worker_private.c  sw_plugin.c  sw_private.c  sw_private.h  test_plugin.c
plugins/soul-worker-rt/: CMakeLists.txt  achievement.c  achievement.h  booster.c  booster.h  buff.c  buff.h  cinema.c  cinema.h  common.h  cutscene.c  cutscene.h  item.c  item.h  league_skill.c  league_skill.h  md5.c  monster.c  monster.h  npc.c  npc.h  prefixed_string.c  prefixed_string.h  quest.c  quest.h  shop.c  shop.h  skill.c  skill.h  soul_metry.c  soul_metry.h  soul_worker_rt_plugin.c  soul_worker_rt_private.c  soul_worker_rt_private.h  speech.c  speech.h  system_mail.c  system_mail.h  table.c  table.h  (+7 more)
src/: CMakeLists.txt  meson.build  rin-plugin-api.h  rin-registry-entry.c  rin-registry-entry.h  rin-registry.c  rin-registry.h  rin-types.h  rin.h
src/rin/: meson.build  rin-archive.c  rin-archive.h  rin-exports.h  rin-info.c  rin-info.h  rin-kit.c  rin-kit.h  rin-metadata.c  rin-metadata.h  rin-module-manager.c  rin-module-manager.h  rin-plugin.c  rin-plugin.h  rin-probe.c  rin-probe.h  rin-project.c  rin-project.h  rin-settings.c  rin-settings.h  rin-stats.c  rin-stats.h  rin-text.c  rin-text.h  rin-translation-metadata.c  rin-translation-metadata.h  rin-translation.c  rin-translation.h  rin-version.h.in  rin.c  rin.h  test-app.c  version.rc.in
src/rin/plugins/: meson.build  rin-soul-worker-plugin.c
src/rin/plugins/soul-worker/: meson.build  rin-soul-worker-module.c  rin-soul-worker-module.h  rin-soul-worker-probe.c  rin-soul-worker-probe.h
src/rin/tests/: test-app.c
subprojects/: .gitignore
tests/: CMakeLists.txt  meson.build  test-rin-registry.c
tests/plugins/dummy/: dummy_test.c  dummy_test_gmodule.c  dummy_test_win32.c  meson.build
utils/: CMakeLists.txt
utils/swae/: CMakeLists.txt  README.md  plugin_loader.c  plugin_loader.h  registry.c  swae.c
