option('tests',
  type : 'boolean',
  value : true,
  description : 'Enable building and running tests (controls subdir tests)'
)

option('examples',
  type : 'boolean',
  value : false,
  description : 'Enable building examples (controls subdir examples)'
)

option('docs',
  type : 'boolean',
  value : false,
  description : 'Enable building documentation (controls subdir docs)'
)
